--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -39,77 +39,5 @@
     group: "{{item.group}}"
     decrypt: "{{item.decrypt}}"
   with_items:
-    - { src: "rc.local.j2",        dest: "/etc/rc.local",                    mode: "0755", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
-    - { src: "sudoers.j2",         dest: "{{mainETC}}/sudoers",              mode: "0440", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
-    - { src: "sudoers.manager.j2", dest: "{{mainETC}}/sudoers.d/10-manager", mode: "0440", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
-    - { src: "sshd_config.j2",     dest: "/etc/ssh/sshd_config",             mode: "0644", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
-    - { src: "bsd/rc.conf.j2",     dest: "/etc/rc.conf",                     mode: "0644", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
-
-- name: Create manager user group
-  group:
-    name: "{{managerGroup}}"
-    system: no
-    gid: "{{managerGID}}"
-    state: present
-
-- name: Create sudo group
-  group:
-    name: sudo
-    system: no
-    gid: 27
-    state: present
-  when: ansible_os_family == 'FreeBSD'
-
-- name: Create manager user
-  user:
-    name: "{{managerName}}"
-    uid: "{{managerUID}}"
-    group: "{{managerGroup}}"
-    home: "{{usersHomeFolder}}/{{managerName}}"
-    shell: "{{usersDefShell}}"
-    state: present
-
-- name: Correct permissiona manager user home
-  command: chown -R "{{managerName}}:{{managerGroup}}" "{{usersHomeFolder}}/{{managerName}}"
-  changed_when: false
-
-- name: Install authorized_keys for manager user
-  authorized_key:
-    user: "{{managerName}}"
-    key: "{{ lookup('file','authorized_keys') }}"
-
-- name: Install authorized_keys for root user
-  authorized_key:
-    user: root
-    key: "{{ lookup('file','authorized_keys') }}"
-
-- name: Add manager user to group 'root/wheel'
-  user:
-    name: "{{managerName}}"
-    append: yes
-    groups: "{{rootGroup}}"
-    create_home: no
-
-- name: Add manager user to group 'sudo'
-  user:
-    name: "{{managerName}}"
-    append: yes
-    groups: sudo
-    create_home: no
-
-- name: Stop exim4
-  shell: systemctl stop exim4
-  ignore_errors: true
-  changed_when: false
-  when: ansible_os_family == 'Debian' or ansible_os_family == 'Ubuntu'
-
-- name: Disable exim4
-  shell: systemctl disable exim4
-  ignore_errors: true
-  changed_when: false
-  when: ansible_os_family == 'Debian' or ansible_os_family == 'Ubuntu'
-
-- name: Restart ssh server
-  ansible.builtin.service:
-    name: "{{sshService}}"
-    state: restarted
+    - { src: "rc.local.j2", dest: "/etc/rc.local", mode: "0755", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
+    - { src: "rc.conf.j2",  dest: "/etc/rc.conf",  mode: "0644", owner: "root", group: "{{rootGroup}}", decrypt: "no" }
