Print status of services

--- a/roles/auth/tasks/main.yml
+++ b/roles/auth/tasks/main.yml
@@ -67,3 +67,10 @@
   ansible.builtin.service:
     name: "{{sshService}}"
     state: restarted
+
+- name: Check ssh server status
+  shell: service "{{sshService}}" status
+  register: sOut
+
+- debug:
+    var: sOut.stdout_lines
